[project]
name = "social-performance"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "pandas",
    "openpyxl",
    "gspread",
    "google-auth",
    "google-api-python-client",
    "selenium",
    "redis",
]

[project.scripts]
app = "scraper:app"
